画像の大きさ、比率調整

--- a/Sample.css
+++ b/Sample.css
@@ -1,6 +1,11 @@
-body{
+body {
   background-color: cornflowerblue;
   color: white;
   font-size: 2em;
   font-family: cursive;
+}
+
+img {
+  width: 500px;
+  height: auto;
 }
