--- a/Sample.css
+++ b/Sample.css
@@ -1,11 +1,63 @@
-body {
-  background-color: cornflowerblue;
+h1 {
+  width: 100%;
+  margin: 0;
+  padding: 3em 0;
   color: white;
+  background-color: cornflowerblue;
+  background-image: url(https://source.unsplash.com/random);
+  background-size: cover;
+  /* background-size: contain; */
+  /* background-position: center; */
+  /* background-repeat: repat-x; */
+  font-family: fantasy;
+  font-size: 3em;
+  text-indent: 1em;
+  letter-spacing: 10px;
+}
+
+h2 {
+  width: 15em;
+  margin: 1em auto;
+  padding: 0;
+  border-color: black;
+  border-style: solid;
+  border-width: 0 0 1px 0;
+  font-family: fantasy;
   font-size: 2em;
-  font-family: cursive;
+  text-align: center;
+}
+
+p {
+  width: 80%;
+  margin: 0 auto;
+  padding: 0.5em;
+  text-align: center;
+}
+
+.image {
+  width: 60%;
+  margin: 0.5em auto;
+  padding: 0.5em;
+  background-color: whitesmoke;
 }
 
 img {
-  max-width: 100%;
-  height: auto;
+  width: 100%;
+}
+
+table {
+  width: 80%;
+  margin: 0 auto;
+}
+
+th {
+  background-color: mediumaquamarine;
+  border: white 2px solid;
+  text-align: center;
+}
+
+td {
+  background-color: lemonchiffon;
+  border: white 1px solid;
+  text-align: center;
 }
