--- a/Sample.css
+++ b/Sample.css
@@ -1,63 +1,61 @@
-h1 {
-  width: 100%;
-  margin: 0;
-  padding: 3em 0;
-  color: white;
+body {
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  /* height: 100vh;
+  width: 100vw; */
   background-color: cornflowerblue;
-  background-image: url(https://source.unsplash.com/random);
-  background-size: cover;
-  /* background-size: contain; */
-  /* background-position: center; */
-  /* background-repeat: repat-x; */
-  font-family: fantasy;
-  font-size: 3em;
-  text-indent: 1em;
-  letter-spacing: 10px;
-}
-
-h2 {
-  width: 15em;
-  margin: 1em auto;
-  padding: 0;
-  border-color: black;
-  border-style: solid;
-  border-width: 0 0 1px 0;
-  font-family: fantasy;
-  font-size: 2em;
-  text-align: center;
-}
-
-p {
-  width: 80%;
-  margin: 0 auto;
-  padding: 0.5em;
-  text-align: center;
-}
-
-.image {
-  width: 60%;
-  margin: 0.5em auto;
-  padding: 0.5em;
-  background-color: whitesmoke;
+  color: white;
+  /* font-size: 2em; */
+  font-family: cursive;
 }
 
 img {
-  width: 100%;
+  max-width: 1000px;
+  width: 300px;
+  margin: 5px 5px;
+  height: auto;
+  text-align: center;
 }
 
-table {
-  width: 80%;
+.thumbnail {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  /* align-items: flex-end; */
+  /* flex-wrap: wrap; */
+}
+
+#bigimage {
+  width: 500px;
+  height: auto;
   margin: 0 auto;
 }
 
-th {
+#smallimage {
+  width: 100px;
+  height: 100px;
+}
+
+/* input {
+  width: 100px;
+  text-align: center;
+} */
+
+table {
   background-color: mediumaquamarine;
   border: white 2px solid;
-  text-align: center;
+  color: black;
+  /* width: 500px; */
 }
 
 td {
-  background-color: lemonchiffon;
+  width: 200px;
   border: white 1px solid;
-  text-align: center;
+}
+
+form {
+  margin-top: 20px;
 }
